src/objects/DMSPM__SPM_Opportunity_Filter__c.object
<CustomObject>
    <fields>
        <fullName>DMSPM__Billing_Filtering_Report_Id__c</fullName>
        <label>Billing Filtering Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMSPM__Filtering_Report_Id__c</fullName>
        <description>This field stores the id of another report whose filter we splice into the reports which SPM uses. Note we never actually run this report we simply use it to provide extra filters.</description>
        <inlineHelpText>This field stores the id of another report whose filter we splice into the reports which SPM uses. Note we never actually run this report we simply use it to provide extra filters.</inlineHelpText>
        <label>Filtering Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker SPM Revenue Type</label>
    <listViews>
        <fullName>DMSPM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SPM Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker SPM Revenue Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>